<resources>

    <!-- no tocar -->
    <string name="app_ad_id"> </string>
    <string name="banner_ad_unit_id"> </string>
    <string name="interstitial_ad_unit_id"> </string>
    <!-- termina la seccion -->

    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/Parque-de-Ferias-APP-569631603459937/</string>
    <string name="youtube_url">http://www.economiafamiliar.gob.ni/</string>
    <string name="twitter_user_id">https://twitter.com/feriasApp18</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/parquedeferia?lang=es</string>
    <string name="google_plus_url">https://www.google.com.ni/maps/dir//Parque+De+Ferias,+Managua/@12.1063996,-86.2922532,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x8f7155b1c867d243:0x2ec47ac0e1bf8315!2m2!1d-86.2900523!2d12.1055944!3e0</string>

    <!-- terrminos y condiciones del uso de la app -->



    <!-- Nombre de la app -->
    <string name="app_name">Parque de Ferias App</string>
    <string name="tagline">Comunitaria, Cooperativa y Asociativa</string>

    <string name="site_menu_home">Inicio</string>
    <string name="site_menu_menus">Menu</string>
    <string name="site_menu_categories">Categorias</string>
    <string name="site_menu_favourite">Marcadores</string>
    <string name="site_menu_home_cat">Inicio Categorias</string>

    <string name="social">Social</string>
    <string name="youtube">MEFCCA</string>
   <string name="facebook">Facebook</string>
   <string name="twitter">Twitter</string>
   <string name="google_plus">Como llegar</string>





   <string name="share">Compartir</string>
   <string name="rate">Calificar aplicación</string>
   <string name="settings">Ajustes</string>
   <string name="exit">Salir</string>
   <!-- final de la configuracion del sitio-->
    
    <!-- app link del sitio plataforma de control: www.myimagina.website -->
    <string name="app_link_base_url">myimagina.website</string>
    <string name="app_link_path_prefix">myimagina.website</string>
    <!-- end of the app link section -->


    <string name="featured_posts">Agenda semanal</string>
    <string name="see_more">Ver más</string>
    <string name="recent_posts">Publicaciones Recientes</string>
    <string name="favourite">Marcadores</string>
    <string name="category_list">Categorias</string>
    <string name="home_cat_list">Inicio Categorias</string>
    <string name="menu_list">Menus</string>
    <string name="loadmore">Cargando más publicaciones, Favor esperar...</string>
    <string name="details">Detalles de la Publicación</string>


    <string name="post_list">Lista de publicaciones</string>
    <string name="tapAgain">Toque de nuevo para salir!</string>
    <string name="no_internet">Sin internet!</string>
    <string name="connect">Conectar</string>
    <string name="others">Otros</string>
    <string name="search">Buscar</string>
    <string name="refresh">Refrescar</string>
    <string name="close">Cerrar</string>
    <string name="says">Dilo: </string>
    <string name="comments">Comentarios: </string>
    <string name="comment_list">Lista de comentarios</string>
    <string name="write_a_comment">Escribe algo...</string>
    <string name="reply">Contestar</string>
    <string name="comment_details">Detalles del comentario</string>
    <string name="welcome_message">Bienvenidos</string>
    <string name="successful_reply">Respondió exitosamente!</string>
    <string name="error_message">Lo sentimos, algunos errores ocurrieron!</string>
    <string name="successful_comment">Comentado con éxito!</string>
    <string name="custom_link">Enlace personalizado</string>
    <string name="permission_not_granted">Permission not granted!</string>


    <string name="empty_result">No hay información!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <string name="share_text">Parque de Feria App:</string>
    <string name="send_to">Enviar a: </string>

    <string name="close_prompt">Seguro que quieres cerrar la aplicación?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="install_messenger">Instalar facebook messenger</string>
    <string name="tts_wait_msg">Este artículo será leído en breve. Por favor, espera un momento...</string>
    <string name="tts_install_msg">Por favor instale el paquete de inglés desde aquí</string>


    // Notification
    <string name="pref_notification_title">Notificación</string>
    <string name="pref_notification_summ">Activar / desactivar la notificación</string>
    <string name="pref_zoom_title">Controlador de zoom</string>
    <string name="pref_zoom_summ">Habilitar el controlador de zoom para acercar / alejar páginas</string>
    <string name="pref_text_title">Tamano del texto</string>
    <string name="select_size">Seleccionar tamaño de texto</string>
    <string name="delete_notify_msg">Quieres borrar esta notificación?</string>
    <string name="delete_all_notify_msg">Quieres borrar todas las notificaciones?</string>
    <string name="empty_list">La lista ya está vacía!</string>

    <string name="small_text">Pequeña</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Grande</string>

    <string name="matches">matches</string>
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="read_post">Leer publicación</string>
    <string name="notification_title">Título de la notificación: </string>
    <string name="notification_details">Detalles de la notificación: </string>

    <string name="failed">Ha fallado</string>

    <string name="comment_reply">Respuesta</string>
    <string name="comment_replies">respuestas</string>

    <string name="admin">Administrador</string>
    <string name="default_str">Default</string>
    <string name="author_name">Me</string>

    <string name="all_comment">Todos los comentarios (%d)</string>

    <string name="delete_fav_item">Quieres eliminar esta publicación de la lista de marcadores?</string>
    <string name="delete_all_fav_item">Desea eliminar todas las publicaciones de la lista de marcadores?</string>
    <string name="delete_all">Borrar todo</string>

</resources>
