<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!-- Recommended icon color code: #828282 -->
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/site_menu_home"/>

        <item
            android:id="@+id/action_menus"
            android:icon="@drawable/ic_menu1"
            android:title="@string/site_menu_menus"/>

        <item
            android:id="@+id/action_categories"
            android:icon="@drawable/ic_category1"
            android:title="@string/site_menu_categories"/>

        <item
            android:id="@+id/action_favourite"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/site_menu_favourite"/>

        <item
            android:id="@+id/action_home_cat"
            android:icon="@drawable/ic_pin"
            android:title="@string/site_menu_home_cat"/>

    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/action_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube"/>

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook"/>

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter"/>

            <item
                android:id="@+id/action_google_plus"
                android:icon="@drawable/ic_google_plus"
                android:title="@string/google_plus"/>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate"/>

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>
